tests/expectations/compiler/core/algorithms/poseidon4_hash_to_scalar.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:25
     |
  28 |         let a: scalar = Poseidon4::hash_to_scalar(addr_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:25
     |
  29 |         let b: scalar = Poseidon4::hash_to_scalar(bool_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:25
     |
  30 |         let c: scalar = Poseidon4::hash_to_scalar(field_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:25
     |
  31 |         let d: scalar = Poseidon4::hash_to_scalar(group_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:25
     |
  32 |         let e: scalar = Poseidon4::hash_to_scalar(i8_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:25
     |
  33 |         let f: scalar = Poseidon4::hash_to_scalar(i16_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:25
     |
  34 |         let g: scalar = Poseidon4::hash_to_scalar(i32_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:25
     |
  35 |         let h: scalar = Poseidon4::hash_to_scalar(i64_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:25
     |
  36 |         let i: scalar = Poseidon4::hash_to_scalar(i128_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:25
     |
  37 |         let j: scalar = Poseidon4::hash_to_scalar(u8_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:25
     |
  38 |         let k: scalar = Poseidon4::hash_to_scalar(u16_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:25
     |
  39 |         let l: scalar = Poseidon4::hash_to_scalar(u32_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:25
     |
  40 |         let m: scalar = Poseidon4::hash_to_scalar(u64_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:25
     |
  41 |         let n: scalar = Poseidon4::hash_to_scalar(u128_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:25
     |
  42 |         let o: scalar = Poseidon4::hash_to_scalar(scalar_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:25
     |
  44 |         let q: scalar = Poseidon4::hash_to_scalar(Foo { a: 1u128, b: 1u128 });
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
